--- a/src/app/bottom-bar/bottom-bar.component.html
+++ b/src/app/bottom-bar/bottom-bar.component.html
@@ -1,7 +1,7 @@
 <div style="background-color: black; color: gray; white-space: nowrap; overflow: hidden;">
     <span [routerLink]="['']" class="wordLink">&copy; 2020 Snohomish Film Festival</span> |
     <span [routerLink]="['/contact']" class="wordLink">Contact</span> |
-    <a href="https://filmfreeway.com/SnohomishFilmFestival" class="wordLink">Film Freeway</a>
+    <a href="https://filmfreeway.com/SnohomishFilmFestival" class="wordLink" target="_blank">Film Freeway</a>
 </div>
 <!--<div>Sponsors</div>
 <div class="container-fluid">
