--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,13 +2,14 @@
 
     <img src="assets/graphics/film3.jpg" class="image">
 
-        <div style="font-size: 24px; font-weight: 700;"> -Contact-</div>
+    <div style="font-size: 24px; font-weight: 700;"> -Contact-</div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="borderClass">
-                        <div class="titleCLass"><i class="fa fa-user"></i> Festival Contacts</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="borderClass">
+                    <div class="titleCLass"><i class="fa fa-user"></i> Festival Contacts</div>
+                    <div style="padding: 10px;">
 
                         <div><b>Rick Medved</b></div>
                         <div style="color: gray;">Director</div>
@@ -16,32 +17,32 @@
                         <hr>
                         <div><b>Bethanne Stevens</b></div>
                         <div style="color: gray;">Assistant Director</div>
-                        <div><a href="mailto:bethanne@snohomishfilmfestival.com">bethanne@snohomishfilmfestival.com</a></div>
+                        <div><a href="mailto:bethanne@snohomishfilmfestival.com">bethanne@snohomishfilmfestival.com</a>
+                        </div>
                         <hr>
-                        <div><b>Kevin Hallagan</b></div>
-                        <div style="color: gray;">Program & Events Manager</div>
-                        <div><a href="mailto:kevin@snohomishfilmfestival.com">kevin@snohomishfilmfestival.com</a></div>
+                        <div><b>Wendy Gonzales</b></div>
+                        <div style="color: gray;">Operations Manager</div>
+                        <div><a href="mailto:meadowdaleproductions@gmail.com">meadowdaleproductions@gmail.com</a></div>
                         <hr>
                         <div><b>Antonio Dileo</b></div>
                         <div style="color: gray;">Stage & Script Manager</div>
-                        <div><a href="mailto:antonio@snohomishfilmfestival.com">antonio@snohomishfilmfestival.com</a></div>
-                        <hr>
-                        <div><b>Lisa Skvarla</b></div>
-                        <div style="color: gray;">Marketing Manager</div>
-                        <div><a href="mailto:lisa@snohomishfilmfestival.com">lisa@snohomishfilmfestival.com</a></div>
-                        
+                        <div><a href="mailto:antonio@snohomishfilmfestival.com">antonio@snohomishfilmfestival.com</a>
+                        </div>
                     </div>
-
-                    
                 </div>
-                <div class="col-sm-6">
-                    <div *ngIf="successFlg" style="font-size: 24px; color: green;">Thank you! Comments have been sent. Expect a reply shortly.</div>
-                    <div *ngIf="!successFlg" class="borderClass">
-                        <div class="titleCLass"><i class="fa fa-comments"></i> Send us comments</div>
-                        <app-form-wrapper [loadingFlg]="loadingFlg" [formFields]="formFields" (messageEvent)="submitButtonClicked($event)"></app-form-wrapper>
-                    </div>
+
+
+            </div>
+            <div class="col-sm-6">
+                <div *ngIf="successFlg" style="font-size: 24px; color: green;">Thank you! Comments have been sent.
+                    Expect a reply shortly.</div>
+                <div *ngIf="!successFlg" class="borderClass">
+                    <div class="titleCLass"><i class="fa fa-comments"></i> Send us comments</div>
+                    <app-form-wrapper [loadingFlg]="loadingFlg" [formFields]="formFields"
+                        (messageEvent)="submitButtonClicked($event)"></app-form-wrapper>
                 </div>
             </div>
         </div>
+    </div>
 
 </app-page-shell>
