--- a/src/app/help-wanted/help-wanted.component.html
+++ b/src/app/help-wanted/help-wanted.component.html
@@ -10,19 +10,26 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-user"></i> Help Wanted</div>
-                        <p>Are you a member of the local film community or even just a film enthusiast?</p>
-                        <p>We are looking for volunteers who are interested in watching local independent films, rating them and providing feedback. No experience necessary and the work can be done from home.</p>
-                        <p>Snohomish Film Festival accepts movies from anyone, no matter who you are, or what political beliefs you have. We expect Guild Members to judge films based on their artistic value, stories, acting, sound and cinematography, not based on politics.</p>
-                        <p>If this sounds like you, we would love to hear from you!</p>
+                        <div style="padding: 10px;">
+                            <p>Are you a member of the local film community or even just a film enthusiast?</p>
+                            <p>We are looking for volunteers who are interested in watching local independent films,
+                                rating them and providing feedback. No experience necessary and the work can be done
+                                from home.</p>
+                            <p>Snohomish Film Festival accepts movies from anyone, no matter who you are, or what
+                                political beliefs you have. We expect Guild Members to judge films based on their
+                                artistic value, stories, acting, sound and cinematography, not based on politics.</p>
+                            <p>If this sounds like you, we would love to hear from you!</p>
+                        </div>
                     </div>
-                    <app-button *ngIf="1 || !user.id" (click)="loginModal.show()" [name]="'Sign up!'" [class]="'large'"></app-button>
 
                 </div>
                 <div class="col-sm-6">
-                    <div *ngIf="successFlg" style="font-size: 24px; color: green;">Thank you! Request has been sent. Click the signup button to create a profile!</div>
+                    <div *ngIf="successFlg" style="font-size: 24px; color: green;">Thank you! Request has been sent.
+                        Click the signup button to create a profile!</div>
                     <div *ngIf="!successFlg" class="borderClass">
                         <div class="titleCLass"><i class="fa fa-comments"></i> Request Guild Member Status</div>
-                        <app-form-wrapper [loadingFlg]="loadingFlg" [formFields]="formFields" (messageEvent)="submitButtonClicked($event)"></app-form-wrapper>
+                        <app-form-wrapper [loadingFlg]="loadingFlg" [formFields]="formFields"
+                            (messageEvent)="submitButtonClicked($event)"></app-form-wrapper>
                     </div>
                 </div>
             </div>
